syntax = "proto3";

package chat;

option go_package = "github.com/knighthell-family/knighthell-family-idl/chat";

import "google/protobuf/timestamp.proto";
import "chat-room.proto";
import "chat-user.proto";

message ChatParticipant {
  string id = 1;

  ChatUser createdBy = 2;
  google.protobuf.Timestamp createdDateTimeUTC = 3;
  optional ChatUser updatedBy = 4;
  optional google.protobuf.Timestamp updatedDateTimeUTC = 5;
  optional ChatUser deletedBy = 6;
  optional google.protobuf.Timestamp deletedDateTimeUTC = 7;

  ChatRoom room = 8;
  ChatUser user = 9;

  optional string participantName = 10;
  optional string participantPhotoUrl = 11;
}

enum ChatParticipantType {
  OWNER = 0;
  MANAGER = 1;
  PARTICIPANT = 2;
}